# roo_windows_transceivers

./: BUILD  MODULE.bazel  library.json  library.properties
.github/workflows/: workflow.yml
examples/roles/: roles.ino
src/: roo_windows_onewire.h  roo_windows_transceivers.h
src/roo_windows_onewire/: model.h
src/roo_windows_onewire/activity/: assignment_dialog.cpp  assignment_dialog.h  details_activity.h  list_activity.cpp  list_activity.h  model.h  thermometer_assignment_dialog.cpp  thermometer_assignment_dialog.h  thermometer_details_activity.h
src/roo_windows_onewire/model/: simple_model.h
src/roo_windows_onewire/model/switches/: resources.cpp  resources.h  switch_selector_model.h
src/roo_windows_onewire/model/thermometers/: resources.cpp  resources.h  roo_control_thermometer_selector_model.h  roo_control_thermometers.h  thermometer_selector_model.h
src/roo_windows_transceivers/: model.h
src/roo_windows_transceivers/activity/: assignment_dialog.cpp  assignment_dialog.h  details_activity.h  list_activity.cpp  list_activity.h
src/roo_windows_transceivers/model/: simple_model.h
src/roo_windows_transceivers/model/switches/: resources.cpp  resources.h  switch_selector_model.h
src/roo_windows_transceivers/model/thermometers/: resources.cpp  resources.h  thermometer_selector_model.h
src/roo_windows_transceivers/widgets/: descriptor.cpp  descriptor.h
